tests/negative/syntax/empty-match/err.expected
ERROR:
Expected one or more match case clauses at test.smol:9:9-9:10:
         8 |         match empty {
         9 |         }
           |         ^
        10 |     }
